[tool.poetry]
name = "bloggy"
version = "0.1.0"
description = "A microblog with reddit-like comment system."
authors = ["MakuZo <MakuZo90@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
bleach = "^3.1.0"
Django = "^2.2.0"
markdown = "^3.0.1"
bleach_whitelist = "^0.0.10"
django_mptt = "^0.10.0"
djangorestframework = "^3.11.0"
django-allauth = "^0.41.0"
django-rest-auth = "^0.9.5"

[tool.poetry.dev-dependencies]
pre-commit = "^1.20.0"
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
